# HYDRA-Injector

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: hydra.yml
docs/: design_analysis.md  release_checklist.md
examples/: code_bundle_spec.json  code_injection_spec.json  code_target.py  demo_spec.json
schema/: codeweave_bundle.schema.json  codeweave_spec.schema.json  hydra_spec.schema.json
src/hydra_injector/: __init__.py  cli.py  codeweave.py  governance.py  operator.py  robustness.py
tests/: test_codeweave.py  test_operator.py
